fix jumping on shoutout page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@
 @import url('./button.css');
 
 html, body {
-    height: 100%
+    height: 100%;
+    overflow: visible;
 }
 body {
     font-family: "Poppins", sans-serif;
