--- a/src/css/shoutouts.css
+++ b/src/css/shoutouts.css
@@ -46,9 +46,10 @@
     border: 5px solid #755DA1;
     border-radius: 70px;
     box-shadow: 0px 0px 69px rgba(192, 192, 192, .29);
-    position: absolute;
-    top: 100px;
-    margin-right: 60px;
+    position: fixed;
+    top: 10vh;
+    left: 10vh;
+    right: 10vh;
     visibility: hidden;
     opacity: 0;
     transition: opacity .5s ease-in-out;
