--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
 @import url('./button.css');
 
 html, body {
-    height: 100%
+    height: 100%;
 }
 body {
     font-family: "Poppins", sans-serif;
